Upgrade to Spring Boot 4, Spring Framework 7, Hibernate 7, and Java 21
Core framework upgrade from Spring Boot 3.5/Hibernate 6.4 to
Spring Boot 4.0/Spring Framework 7.0/Hibernate 7.1.

- Update parent POM to Spring Boot 4.0.1 with Spring Framework 7.0.2
- Migrate Hibernate SessionFactory to Spring 7 package
  (org.springframework.orm.hibernate6)
- Update hibernate.cfg.xml for Hibernate 7
- Migrate HTTP client from Apache HttpClient 4 to HttpClient 5
  (org.apache.hc.core5/org.apache.hc.client5)
- Migrate Jackson 2 (com.fasterxml.jackson) to Jackson 3 (tools.jackson)
  across all source files (OpenRewrite automated migration)
- Migrate JUnit 5 to JUnit 6 across all source files
  (OpenRewrite automated migration)
- Update Spring Security configuration for Spring Security 7
- Update all Maven dependency versions for compatibility
- Add Solr 10 and Jetty 12 dependency management
- Update Dockerfiles for Java 21