@@ -43,7 +43,7 @@ public class ItemLinksetProcessor extends ItemSignpostingProcessor {
                 String signpostingPath = configurationService.getProperty("signposting.path");
                 String baseUrl = configurationService.getProperty("dspace.ui.url");
 
-                String linksetUrl = String.format("%s/%s/linksets/%s", baseUrl, signpostingPath, item.getID());
+                String linksetUrl = "%s/%s/linksets/%s".formatted(baseUrl, signpostingPath, item.getID());
                 String linksetJsonUrl = linksetUrl + "/json";
                 String anchor = buildAnchor(context, item);
                 List<LinksetNode> links = List.of(
